fixed gap near personas

--- a/lesson3/styles/style.css
+++ b/lesson3/styles/style.css
@@ -115,6 +115,7 @@ footer {
         grid-template-columns: 200px, auto;
         grid-gap: 25px;
         align-items: center;
+        margin-top: -25px;
     }
     .pimg {
         grid-column: 1;
